2007-11-30 08:39 +0100  Rocco Rutte  <pdmef@gmx.net>  (234c02747bb3)

	* commands.c: Format status line for external and internal pager the
	same way to make %P work

2007-11-29 16:03 +0100  Rocco Rutte  <pdmef@gmx.net>  (4899bcc1c2c3)

	* ChangeLog, doc/db-cleanup.xsl: Add ascii-replacements for 0x2dc
	(tilde) and 0x2026 (...) too. The manual cannot be clean us-acii but
	now we should have at least latin1

2007-11-29 15:24 +0100  Rocco Rutte  <pdmef@gmx.net>  (c64cb80a90a6)

	* doc/Makefile.am, doc/db-cleanup.xsl: Add a really ugly hack to make
	sure the plain text manual is us-ascii. The hack is filtering
	manual.html to another HTML file but replacing unicode chars by
	their ascii equivalents. The intermediate file is used to dump HTML
	to us-ascii text (and only for that).

2007-11-29 10:18 +0100  Rocco Rutte  <pdmef@gmx.net>  (33895288520e)

	* ChangeLog, hcache.c: Fix hcache build issue when building with gdbm
	if qdbm is installed, too

2007-11-21 13:19 +0100  Miroslav Lichvar  <mlichvar@redhat.com>  (9286a76e79a2)

	* send.c: Don't ignore $from in batch send mode.

2007-11-23 15:11 +0100  Rocco Rutte  <pdmef@gmx.net>  (12a1d843c975)

	* ChangeLog, curs_lib.c: Don't attempt to print progress if inc is 0,
	just print initial message

2007-11-21 14:14 -0800  Ronny Haryanto  <ronnylist@haryan.to>  (0e99eaaecd67)

	* po/id.po: Updated Indonesian translation

2007-11-21 16:47 +0100  Rocco Rutte  <pdmef@gmx.net>  (309ab3a63d91)

	* ChangeLog, UPDATING: Add UPDATING entry for $check_mbox_size

2007-11-21 14:46 +0100  Rocco Rutte  <pdmef@gmx.net>  (b8d811e5931e)

	* init.h: Clarify the description for $timeout

2007-11-21 11:16 +0100  Rocco Rutte  <pdmef@gmx.net>  (849daa6be9f5)

	* ChangeLog, UPDATING: Remove raw utf-8 char in UPDATING to make it
	ascii again

2007-11-20 19:46 +0100  Rocco Rutte  <pdmef@gmx.net>  (96f931ae0b22)

	* doc/manual.xml.head, init.h: Document that save-hook/fcc-hook/fcc-
	save-hook use $index_format expandos. Closes #2135.
